tests/ui/rfcs/rfc-2632-const-trait-impl/effects/no-explicit-const-params.stderr
error[E0107]: function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:22:5
   |
LL |     foo::<false>();
   |     ^^^--------- help: remove these generics
   |     |
   |     expected 0 generic arguments
   |
note: function defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:3:10
   |
LL | const fn foo() {}
   |          ^^^

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:24:12
   |
LL |     <() as Bar<false>>::bar();
   |            ^^^------- help: remove these generics
   |            |
   |            expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:6:7
   |
LL | trait Bar {
   |       ^^^

error[E0308]: mismatched types
  --> $DIR/no-explicit-const-params.rs:24:5
   |
LL |     <() as Bar<false>>::bar();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected constant `false`
              found constant `true`

error[E0107]: function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:15:5
   |
LL |     foo::<true>();
   |     ^^^-------- help: remove these generics
   |     |
   |     expected 0 generic arguments
   |
note: function defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:3:10
   |
LL | const fn foo() {}
   |          ^^^

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:17:12
   |
LL |     <() as Bar<true>>::bar();
   |            ^^^------ help: remove these generics
   |            |
   |            expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:6:7
   |
LL | trait Bar {
   |       ^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0107, E0308.
For more information about an error, try `rustc --explain E0107`.
